--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -30,7 +30,23 @@
         <activity
             android:name=".LandingPageActivity"
             android:label="@string/title_activity_landing_page"
-            android:theme="@style/AppTheme.NoActionBar"></activity>
+            android:theme="@style/AppTheme.NoActionBar" />
+        <activity
+            android:name=".SettingsActivity"
+            android:label="@string/title_activity_settings"
+            android:theme="@style/AppTheme.NoActionBar" />
+        <activity
+            android:name=".ContactUsActivity"
+            android:label="@string/title_activity_contactus"
+            android:theme="@style/AppTheme.NoActionBar" />
+        <activity
+            android:name=".LoanActivity"
+            android:label="@string/title_activity_loan"
+            android:theme="@style/AppTheme.NoActionBar" />
+        <activity
+            android:name=".TrendsActivity"
+            android:label="@string/title_activity_trends"
+            android:theme="@style/AppTheme.NoActionBar" />
     </application>
 
 </manifest>
