--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -31,15 +31,10 @@
             android:theme="@style/AppTheme.NoActionBar" />
         <activity
             android:name=".SettingsActivity"
-            android:label="@string/title_activity_settings"
-            android:theme="@style/AppTheme.NoActionBar" />
+            android:label="@string/title_activity_settings" />
         <activity
             android:name=".ContactUsActivity"
             android:label="@string/title_activity_contactus"
-            android:theme="@style/AppTheme.NoActionBar" />
-        <activity
-            android:name=".LoanActivity"
-            android:label="@string/title_activity_loan"
             android:theme="@style/AppTheme.NoActionBar" />
         <activity
             android:name=".burn_out"
