--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,8 +19,7 @@
         <activity
             android:name=".LoginActivity"
             android:label="Login"
-            android:theme="@style/AppTheme.NoActionBar">
-        </activity>
+            android:theme="@style/AppTheme.NoActionBar" />
         <activity
             android:name=".LandingPageActivity"
             android:label="@string/title_activity_landing_page"
@@ -30,16 +29,8 @@
             android:label="@string/title_activity_signed_in"
             android:theme="@style/AppTheme.NoActionBar" />
         <activity
-            android:name=".SettingsActivity"
-            android:label="@string/title_activity_settings"
-            android:theme="@style/AppTheme.NoActionBar" />
-        <activity
             android:name=".ContactUsActivity"
             android:label="@string/title_activity_contactus"
-            android:theme="@style/AppTheme.NoActionBar" />
-        <activity
-            android:name=".LoanActivity"
-            android:label="@string/title_activity_loan"
             android:theme="@style/AppTheme.NoActionBar" />
         <activity
             android:name=".burn_out"
@@ -52,6 +43,9 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity
+            android:name=".SettingsActivity"
+            android:label="@string/title_activity_settings"></activity>
     </application>
 
 </manifest>
