--- a/app/build.gradle
+++ b/app/build.gradle
@@ -36,5 +36,5 @@ dependencies {
     compile 'com.google.firebase:firebase-auth:11.8.0'
     compile 'com.google.firebase:firebase-database:11.8.0'
     compile 'com.jjoe64:graphview:4.2.1'
-
 }
+apply plugin: 'com.google.gms.google-services'
